# YukiXHentai

./: .gitignore  CLAUDE.md  ExH_Desktop_Project_Prompt.md  codemagic.yaml  package-lock.json  package.json
.doc/: OVERVIEW.md  SPEC.md  config.md  conventions.md  db-queries.md  db-schema.md  error-codes.md  frontend-components-local.md  frontend-components.md  frontend-stores.md  http-client.md  image-pipeline.md  ios-build.md  ipc-commands.md  models.md
.doc/facts/: README.md  exhentai-advanced-search.md  exhentai-api.md  exhentai-auth.md  exhentai-favorites.md  exhentai-html-structure.md  exhentai-search.md  exhentai-urls.md  tauri-ios.md
.github/workflows/: ios-init.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  login-window.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: library.rs  mod.rs
src-tauri/src/download/: local_queue.rs  mod.rs
src-tauri/src/http/: api.rs  mod.rs  parser.rs
src-tauri/src/images/: mod.rs  read_cache.rs
src-tauri/src/models/: mod.rs
src/lib/api/: auth.ts  favorites.ts  galleries.ts  library.ts  reader.ts
src/lib/components/: AuthStatus.svelte  BottomTabBar.svelte  FavoriteDialog.svelte  FavoritesPage.svelte  FilterPanel.svelte  GalleryCard.svelte  GalleryDetail.svelte  GalleryGrid.svelte  GalleryListItem.svelte  GalleryReader.svelte  HistoryPage.svelte  ImportPreviewDialog.svelte  LocalGalleryCard.svelte  LocalGalleryDetail.svelte  (+15 more)
src/routes/: +page.svelte
(+15 files in other folders)
